--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "ecommerce",
   "version": "0.1.0",
+  "homepage": "http://mathcodes.github.io/Eclectic-Electrics/",
   "private": true,
   "dependencies": {
     "amazon-product-api": "^0.4.4",
+    "gh-pages": "^3.1.0",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
@@ -17,6 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
